# cs_student_copilot

./: .gitignore  LICENSE  README.md  app_streamlit.py  main.py  main_cli.py  pyproject.toml  requirements.txt  setup.sh
agents/: code_helper.py  coordinator.py  scholar_scout.py  study_buddy_rag.py
core/: config.py  llm_service.py
rag_components/: rag_manager.py
tools/: code_helper_tools.py  rag_tools.py  scholar_scout_tools.py
