[project]
name = "cs-student-copilot"
version = "0.1.0"
description = "A multi-agent copilot for CS students, offering help with coding, research, course navigation, and RAG-based querying of course material."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.19",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
]
